Fix horizontal scroll bar and clear up styles updates #123

--- a/static/search.less
+++ b/static/search.less
@@ -89,33 +89,35 @@
 		ul{
 			padding:0;
 			> li{
-				padding: .5em;
-				margin-bottom: .5em;
+				padding: .9em .5em;
 				border-bottom: 1px solid @light-gray-color;
 				border-left:3px solid transparent;
 				a{
 					color: @link-color;
 					padding-bottom:0;
 				}
-
 				.name{
 					line-height: 1;
 					font-size: .75em;
 					font-weight: bold;
 					font-style: italic;
 					display: inline-block;
+					width: 100%;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 				.result-description{
-					font-size: .9em;
+					font-size: .85em;
 					// white-space: nowrap;
 					// text-overflow: ellipsis;
 					// overflow: hidden;
 					width: 100%;
 					display:block;
 					color: @gray;
-					margin-top: 1em;
+					margin-top: .3em;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
-
 				&:hover,
 				&.keyboard-active{
 					background-color: @highlight-color;
@@ -128,6 +130,8 @@
 		.search-results-heading{
 			padding:0 .5em;
 			border-left: 3px solid transparent;
+			border-bottom: 1px solid @light-gray-color;
+			padding-bottom: 1em;
 			.count{
 				font-weight:bold;
 			}
